<resources>
    <string name="app_name">MyFamilyMap</string>
    <string name="serverHost">Server Host</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="gender">Gender</string>
    <string name="female">f</string>
    <string name="male">m</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="serverPort">Server Port</string>
    <string name="username">Username</string>
    <string name="message">%s</string>
    <string name="wrong_message">%s</string>


</resources>